--- a/locale/audacity.pot
+++ b/locale/audacity.pot
@@ -7236,7 +7236,7 @@ msgid "Skip &Forward"
 msgstr ""
 
 #: src/effects/Effect.cpp:3061 src/effects/Effect.cpp:3063
-msgid "Skip &Forward"
+msgid "Skip &Foreward"
 msgstr ""
 
 #: src/effects/Effect.cpp:3067
