--- a/locale/bg.po
+++ b/locale/bg.po
@@ -7929,7 +7929,7 @@ msgstr "Напред"
 
 #: src/effects/Effect.cpp
 #, fuzzy
-msgid "Skip &Forward"
+msgid "Skip &Foreward"
 msgstr "Напред"
 
 #: src/effects/Effect.cpp
