--- a/locale/ca_ES@valencia.po
+++ b/locale/ca_ES@valencia.po
@@ -7662,7 +7662,7 @@ msgstr "Cap a avant"
 
 #: src/effects/Effect.cpp
 #, fuzzy
-msgid "Skip &Forward"
+msgid "Skip &Foreward"
 msgstr "Cap a avant"
 
 #: src/effects/Effect.cpp
