--- a/locale/cy.po
+++ b/locale/cy.po
@@ -7446,7 +7446,7 @@ msgid "Skip &Forward"
 msgstr "Neidio i'r Dechrau"
 
 #: src/effects/Effect.cpp
-msgid "Skip &Forward"
+msgid "Skip &Foreward"
 msgstr ""
 
 #: src/effects/Effect.cpp
