--- a/locale/fa.po
+++ b/locale/fa.po
@@ -7598,7 +7598,7 @@ msgid "Skip &Forward"
 msgstr "پرش به آغاز"
 
 #: src/effects/Effect.cpp
-msgid "Skip &Forward"
+msgid "Skip &Foreward"
 msgstr ""
 
 #: src/effects/Effect.cpp
