--- a/locale/hr.po
+++ b/locale/hr.po
@@ -7869,7 +7869,7 @@ msgstr "Naprijed"
 
 #: src/effects/Effect.cpp
 #, fuzzy
-msgid "Skip &Forward"
+msgid "Skip &Foreward"
 msgstr "Naprijed"
 
 #: src/effects/Effect.cpp
