--- a/locale/ka.po
+++ b/locale/ka.po
@@ -7684,7 +7684,7 @@ msgstr "წინ"
 
 #: src/effects/Effect.cpp
 #, fuzzy
-msgid "Skip &Forward"
+msgid "Skip &Foreward"
 msgstr "წინ"
 
 #: src/effects/Effect.cpp
