--- a/locale/lt.po
+++ b/locale/lt.po
@@ -7485,7 +7485,7 @@ msgid "Skip &Forward"
 msgstr "Perkelti į Pradžią"
 
 #: src/effects/Effect.cpp
-msgid "Skip &Forward"
+msgid "Skip &Foreward"
 msgstr ""
 
 #: src/effects/Effect.cpp
