--- a/locale/mk.po
+++ b/locale/mk.po
@@ -7460,7 +7460,7 @@ msgid "Skip &Forward"
 msgstr "Скокни до почеток"
 
 #: src/effects/Effect.cpp
-msgid "Skip &Forward"
+msgid "Skip &Foreward"
 msgstr ""
 
 #: src/effects/Effect.cpp
