--- a/locale/pl.po
+++ b/locale/pl.po
@@ -7553,7 +7553,7 @@ msgid "Skip &Forward"
 msgstr "Skocz do &przodu"
 
 #: src/effects/Effect.cpp
-msgid "Skip &Forward"
+msgid "Skip &Foreward"
 msgstr "Skocz do &początku"
 
 #: src/effects/Effect.cpp
