--- a/locale/sr_RS.po
+++ b/locale/sr_RS.po
@@ -7711,7 +7711,7 @@ msgid "Skip &Forward"
 msgstr "Премотај на&пред"
 
 #: src/effects/Effect.cpp
-msgid "Skip &Forward"
+msgid "Skip &Foreward"
 msgstr "Премотај &унапред"
 
 #: src/effects/Effect.cpp
