--- a/locale/sv.po
+++ b/locale/sv.po
@@ -7878,7 +7878,7 @@ msgstr "Framåt"
 
 #: src/effects/Effect.cpp
 #, fuzzy
-msgid "Skip &Forward"
+msgid "Skip &Foreward"
 msgstr "Framåt"
 
 #: src/effects/Effect.cpp
