--- a/locale/vi.po
+++ b/locale/vi.po
@@ -7634,7 +7634,7 @@ msgstr "Tiếp"
 
 #: src/effects/Effect.cpp
 #, fuzzy
-msgid "Skip &Forward"
+msgid "Skip &Foreward"
 msgstr "Tiếp"
 
 #: src/effects/Effect.cpp
