--- a/locale/af.po
+++ b/locale/af.po
@@ -7538,7 +7538,7 @@ msgid "Skip &Forward"
 msgstr "Spring na begin"
 
 #: src/effects/Effect.cpp
-msgid "Skip &Forward"
+msgid "Skip &Foreward"
 msgstr ""
 
 #: src/effects/Effect.cpp
