--- a/locale/da.po
+++ b/locale/da.po
@@ -7506,7 +7506,7 @@ msgid "Skip &Forward"
 msgstr "Spring &fremad"
 
 #: src/effects/Effect.cpp
-msgid "Skip &Forward"
+msgid "Skip &Foreward"
 msgstr "Spring &fremad"
 
 #: src/effects/Effect.cpp
