--- a/locale/es.po
+++ b/locale/es.po
@@ -7597,7 +7597,7 @@ msgid "Skip &Forward"
 msgstr "Saltar hacia a&delante"
 
 #: src/effects/Effect.cpp
-msgid "Skip &Forward"
+msgid "Skip &Foreward"
 msgstr "Saltar hacia el p&rincipio"
 
 #: src/effects/Effect.cpp
