--- a/locale/he.po
+++ b/locale/he.po
@@ -7699,7 +7699,7 @@ msgid "Skip &Forward"
 msgstr "דלג להתחלה"
 
 #: src/effects/Effect.cpp
-msgid "Skip &Forward"
+msgid "Skip &Foreward"
 msgstr ""
 
 #: src/effects/Effect.cpp
