--- a/locale/oc.po
+++ b/locale/oc.po
@@ -7429,7 +7429,7 @@ msgid "Skip &Forward"
 msgstr "Enrèire a la començança"
 
 #: src/effects/Effect.cpp
-msgid "Skip &Forward"
+msgid "Skip &Foreward"
 msgstr ""
 
 #: src/effects/Effect.cpp
