--- a/locale/uk.po
+++ b/locale/uk.po
@@ -7573,7 +7573,7 @@ msgid "Skip &Forward"
 msgstr "Перемотати &вперед"
 
 #: src/effects/Effect.cpp
-msgid "Skip &Forward"
+msgid "Skip &Foreward"
 msgstr "Перемотати &вперед"
 
 #: src/effects/Effect.cpp
