Revert "Fix duplicate strings for translation (Skip &Forward)"
This reverts commit 6c8d4e0aaa8764636bf436870b28d17a7a1e9090.

--- a/locale/be.po
+++ b/locale/be.po
@@ -7745,6 +7745,11 @@ msgstr "Наперад"
 
 #: src/effects/Effect.cpp
 #, fuzzy
+msgid "Skip &Forward"
+msgstr "Наперад"
+
+#: src/effects/Effect.cpp
+#, fuzzy
 msgid "Skip forward"
 msgstr "Перайсці да пачатку дарожкі"
 
