--- a/locale/da.po
+++ b/locale/da.po
@@ -7506,6 +7506,10 @@ msgid "Skip &Forward"
 msgstr "Spring &fremad"
 
 #: src/effects/Effect.cpp
+msgid "Skip &Forward"
+msgstr "Spring &fremad"
+
+#: src/effects/Effect.cpp
 msgid "Skip forward"
 msgstr "Spring fremad"
 
