--- a/locale/fi.po
+++ b/locale/fi.po
@@ -7754,6 +7754,10 @@ msgid "Skip &Forward"
 msgstr "Hyppää &eteenpäin"
 
 #: src/effects/Effect.cpp
+msgid "Skip &Forward"
+msgstr "Hyppää &eteenpäin"
+
+#: src/effects/Effect.cpp
 msgid "Skip forward"
 msgstr "Hyppää eteenpäin"
 
