--- a/locale/fr.po
+++ b/locale/fr.po
@@ -7773,10 +7773,15 @@ msgid "Skip backward"
 msgstr "Saut en arrière"
 
 #: src/effects/Effect.cpp
+# trebmuh to check (accélérateur)
+msgid "Skip &Forward"
+msgstr "Saut en avant (&f)"
+
+#: src/effects/Effect.cpp
 # trebmuh to check (accélérateur - mais celle-ci semble être une typo,
 # voir https://github.com/audacity/audacity/pull/219 )
 msgid "Skip &Forward"
-msgstr "Saut en avant"
+msgstr "Saut en avant (&f)"
 
 #: src/effects/Effect.cpp
 msgid "Skip forward"
