--- a/locale/gl.po
+++ b/locale/gl.po
@@ -7864,6 +7864,10 @@ msgid "Skip &Forward"
 msgstr "Ir cara a&diante"
 
 #: src/effects/Effect.cpp
+msgid "Skip &Forward"
+msgstr "Ir ao &principio"
+
+#: src/effects/Effect.cpp
 msgid "Skip forward"
 msgstr "Ir cara adiante"
 
