--- a/locale/hr.po
+++ b/locale/hr.po
@@ -7869,6 +7869,11 @@ msgstr "Naprijed"
 
 #: src/effects/Effect.cpp
 #, fuzzy
+msgid "Skip &Forward"
+msgstr "Naprijed"
+
+#: src/effects/Effect.cpp
+#, fuzzy
 msgid "Skip forward"
 msgstr "Skoči na početak"
 
