--- a/locale/it.po
+++ b/locale/it.po
@@ -7580,6 +7580,10 @@ msgid "Skip &Forward"
 msgstr "Vai &avanti"
 
 #: src/effects/Effect.cpp
+msgid "Skip &Forward"
+msgstr "Vai in &avanti"
+
+#: src/effects/Effect.cpp
 msgid "Skip forward"
 msgstr "Vai avanti"
 
