--- a/locale/ka.po
+++ b/locale/ka.po
@@ -7684,6 +7684,11 @@ msgstr "წინ"
 
 #: src/effects/Effect.cpp
 #, fuzzy
+msgid "Skip &Forward"
+msgstr "წინ"
+
+#: src/effects/Effect.cpp
+#, fuzzy
 msgid "Skip forward"
 msgstr "საწყისზე გადასვლა"
 
