--- a/locale/nl.po
+++ b/locale/nl.po
@@ -7548,6 +7548,10 @@ msgid "Skip &Forward"
 msgstr "Vooruitspoelen"
 
 #: src/effects/Effect.cpp
+msgid "Skip &Forward"
+msgstr "&Vooruitspoelen"
+
+#: src/effects/Effect.cpp
 msgid "Skip forward"
 msgstr "Vooruitspoelen"
 
