--- a/locale/pt_BR.po
+++ b/locale/pt_BR.po
@@ -7585,6 +7585,10 @@ msgid "Skip &Forward"
 msgstr "&Avançar"
 
 #: src/effects/Effect.cpp
+msgid "Skip &Forward"
+msgstr "&Avançar"
+
+#: src/effects/Effect.cpp
 msgid "Skip forward"
 msgstr "Avançar"
 
