--- a/locale/sk.po
+++ b/locale/sk.po
@@ -7933,6 +7933,11 @@ msgstr "Vpred"
 
 #: src/effects/Effect.cpp
 #, fuzzy
+msgid "Skip &Forward"
+msgstr "Vpred"
+
+#: src/effects/Effect.cpp
+#, fuzzy
 msgid "Skip forward"
 msgstr "Na začiatok"
 
