--- a/locale/sl.po
+++ b/locale/sl.po
@@ -7526,6 +7526,10 @@ msgid "Skip &Forward"
 msgstr "Preskoči nap&rej"
 
 #: src/effects/Effect.cpp
+msgid "Skip &Forward"
+msgstr "Preskoči nap&rej"
+
+#: src/effects/Effect.cpp
 msgid "Skip forward"
 msgstr "Preskoči naprej"
 
