--- a/locale/vi.po
+++ b/locale/vi.po
@@ -7634,6 +7634,11 @@ msgstr "Tiếp"
 
 #: src/effects/Effect.cpp
 #, fuzzy
+msgid "Skip &Forward"
+msgstr "Tiếp"
+
+#: src/effects/Effect.cpp
+#, fuzzy
 msgid "Skip forward"
 msgstr "Nhảy về đầu"
 
