--- a/locale/ar.po
+++ b/locale/ar.po
@@ -7273,6 +7273,10 @@ msgstr "تخطى إلى الوراء"
 msgid "Skip backward"
 msgstr "تخطى إلى الوراء"
 
+#: src/effects/Effect.cpp:3051
+msgid "Skip &Forward"
+msgstr "تخطى إلى الأمام"
+
 #: src/effects/Effect.cpp:3061 src/effects/Effect.cpp:3063
 msgid "Skip &Forward"
 msgstr "تخطى إلى الأمام"
