--- a/locale/eu_ES.po
+++ b/locale/eu_ES.po
@@ -7563,6 +7563,10 @@ msgid "Skip &Forward"
 msgstr "Jauzi &aurrerantz"
 
 #: src/effects/Effect.cpp
+msgid "Skip &Forward"
+msgstr "Jauzi &aurrerantz"
+
+#: src/effects/Effect.cpp
 msgid "Skip forward"
 msgstr "Jauzi aurrerantz"
 
