--- a/locale/ja.po
+++ b/locale/ja.po
@@ -7810,6 +7810,10 @@ msgid "Skip &Forward"
 msgstr "前方にスキップ(&F)"
 
 #: src/effects/Effect.cpp
+msgid "Skip &Forward"
+msgstr "前方にスキップ(&F)"
+
+#: src/effects/Effect.cpp
 msgid "Skip forward"
 msgstr "前方にスキップ"
 
