--- a/locale/pt_PT.po
+++ b/locale/pt_PT.po
@@ -7586,6 +7586,10 @@ msgid "Skip &Forward"
 msgstr "Saltar para a Frente"
 
 #: src/effects/Effect.cpp
+msgid "Skip &Forward"
+msgstr "Saltar para a Frente"
+
+#: src/effects/Effect.cpp
 msgid "Skip forward"
 msgstr "Saltar para a frente"
 
