--- a/locale/sr_RS.po
+++ b/locale/sr_RS.po
@@ -7711,6 +7711,10 @@ msgid "Skip &Forward"
 msgstr "Премотај на&пред"
 
 #: src/effects/Effect.cpp
+msgid "Skip &Forward"
+msgstr "Премотај &унапред"
+
+#: src/effects/Effect.cpp
 msgid "Skip forward"
 msgstr "Премотајте напред"
 
