--- a/locale/sv.po
+++ b/locale/sv.po
@@ -7878,6 +7878,11 @@ msgstr "Framåt"
 
 #: src/effects/Effect.cpp
 #, fuzzy
+msgid "Skip &Forward"
+msgstr "Framåt"
+
+#: src/effects/Effect.cpp
+#, fuzzy
 msgid "Skip forward"
 msgstr "Gå till början"
 
