--- a/locale/fr.po
+++ b/locale/fr.po
@@ -4,7 +4,9 @@
 # This file is distributed under the same license as the Audacity package.
 #
 # Translators:
+# Olivier Ballestraz
 # Christian Brochec
+# Fabrice Silva
 # Corentin Rossignon <corentin.rossignon@gmail.com>, 2013
 # Lucas Lechat <lucaslechat@outlook.com>, 2013
 # BobSynfig, 2014
@@ -16,7 +18,7 @@ msgstr ""
 "Project-Id-Version: Audacity\n"
 "Report-Msgid-Bugs-To: audacity-translation@lists.sourceforge.net\n"
 "POT-Creation-Date: 2017-11-06 13:24-0500\n"
-"PO-Revision-Date: 2017-11-28 16:39+0100\n"
+"PO-Revision-Date: 2017-11-28 18:55+0100\n"
 "Last-Translator: Olivier Humbert (trebmuh/olinuxx) <trebmuh@tuxfamily.org>\n"
 "Language-Team: French (http://www.transifex.com/projects/p/audacity/language/"
 "fr/)\n"
